extension_devtools/index.css
body {
    margin: 0;
    font-family: "Roboto Mono", Menlo, Consolas, monospace;
}

.node {
    font-size: 14px;
    line-height: 22px;
    padding: 0 4px;
    border-radius: 3px;
}

.node:hover {
    background-color: #f3f3f5;
}

.node-selected {
    background-color: #ccc4;
}

.node-component__name {
    color: #2080f0;
}

.arrow {
    display: inline-block;
    width: 14px;
    text-align: center;
}

.arrow:hover {
    background-color: #ddd;
}

.arrow-right {
    display: inline-block;
    width: 0;
    height: 0;

    border-top: 4px solid transparent;
    border-bottom: 4px solid transparent;
    border-left: 6px solid #2c3e50;
}

.arrow-bottom {
    transform: rotate(90deg);
    transition: all 0.3s;
}

aside {
    border-left: 1px solid #ddd;
}

.prop-value-tag {
    padding: 0px 4px;
    border: 1px solid #ddd;
    border-radius: 3px;
    font-size: 12px;
}

.prop-value-tag--error {
    background-color: red;
    color: white;
    border-color: transparent;
}

